# AGSBS-infrastructure

./: .gitignore  AGSBS.py  AGSBS.sublime-package  COPYING  ChangeLog  Default (Linux).sublime-keymap  Default (Windows).sublime-keymap  Makefile  PYTHON-LICENSE.md  README-release.md  README.en  README.md  ToDo  codecs.py  epub-generation  index.py  matuc.py  matuc_js.py  messages.pot  pylintrc  pyproject.toml  runtests  runtests.bat  setup.py
MAGSBS/: __init__.py  __main__.py  cache.py  common.py  config.py  contentfilter.py  datastructures.py  errors.py  factories.py  filesystem.py  master.py  matuc.py  matuc_impl.py  matuc_js.py  mparser.py  pagenumber.py  pagenumbering.py  pandoc.py  quality_assurance.py  roman.py  toc.py
cli/: cli.py  matuc.py  old2new.py
debian/: changelog  control  copyright  rules
doc/: JSON api.md
doc-snippets/: README  besondere Zeichen
doc-tmp/: Markdown-und-Spracherweiterungen  Spracherweiterungen  ToDo  bedienung-configuration  docu  files.txt
installer/: EnvVarUpdate.nsh  README.win32  build_debian-package.sh  build_windows_installer.py  build_windows_installer.py.README.md  matuc.nsi
installer_automation/: README  build_installer-linux.sh  build_installer-windows.sh  debian.sh  matuc.nsi
kate/: dialog_Table.ui  dialog_createStructure.ui  dialog_image.ui  dialog_link.ui  dialog_metadata.ui  kateproject_setting.py
lecture_distribution/: README.md  client.py
matuc/: matuc.py  matuc_impl.py  matuc_js.py
matuc_impl/: __init__.py
po/: cs.po  de.po  en.po
sublime/: AGSBS.py  Default (OSX).sublime-keymap  codecs.py
sublime.legacy/: AGSBS.py  Default (OSX).sublime-keymap
tests/: README.md  __main__.py  test_cache.py  test_common.py  test_config.py  (+9 more)
(+576 files in other folders)
